# opencomputer

./: .dockerignore  .gitignore  AGENTS.md  HANDOFF.md  Makefile  PRODUCT.md  README.md  SELFHOSTING.md  go.mod  go.sum  hello-world.md  hello.txt  index.html  package-lock.json  package.json
.agents_wip/: docs-plan.md
benchmarks/: benchmark_e2e.py  cache_probe.py
cf/: README.md  schema.sql
ci/: flue-builder-substrate-probe.py  flue-managed-build-golden.sh  test_flue_builder_substrate_probe.py
cloudflare-workers/: schema.sql  schema_phase10_autumn_concurrency_override.sql  schema_phase11_paused_hibernation_mode.sql  schema_phase2_d1.sql  schema_phase5.sql  schema_phase6.sql  schema_phase7.sql  schema_phase8.sql  schema_phase8_webhooks.sql  schema_phase9_model_billing.sql
demos/: demo-cli.sh  demo-default-template.ts  demo-gitserver.ts  demo-secret-vault.ts  demo-templates.ts
deploy/: Dockerfile.server  Dockerfile.worker  docker-compose.yml  fly-worker.toml  fly.toml  server.env.example  worker-entrypoint.sh  worker.env.example
docs/: blobstore-tigris-cutover.md  docs.json  (+15 more)
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: run_all_tests.py  test_commands.py  test_concurrent.py  test_domain_tls.py  test_environment.py  test_file_ops.py  test_git.py  test_multi_template.py  test_python_sdk.py  test_reconnect.py  test_secrets.py  test_timeout.py
sdks/python/opencomputer/: __init__.py  browser.py  commands.py  desktop.py  exec.py  filesystem.py  git.py  image.py  mounts.py  sandbox.py
sdks/python/opensandbox/: __init__.py  git.py  sandbox.py
(+1091 files in other folders)
