[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensandbox"
version = "0.1.0"
description = "Python SDK for OpenSandbox - E2B-compatible sandbox platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
